Development Portal (2017-03-06 shi)
==============================
Start on Explore section for revised search inputs
Update new layout for search sections 
Update css when confirmed
Updated typehead for explore section


Development Portal (2017-02-27 shi)
==============================
Fix roles placement for participating-org
Fix blocks for period so they are table-cells
Switch sector icons for search
Renamed sector category to sector group


Development Portal (2017-02-24 shi)
==============================
Fix roles for ver 2.02 codes


Development Portal (2017-01-15 shi)
==============================
Results data


Development Portal (2016-12-04 shi)
==============================
Update width columns for result table in SAVi
Add css for 'flow-type' and 'finance-type' in SAVi


Development Portal (2016-12-02 shi)
==============================
Update fixes for inspire template
Update fixes for mustard template
Minor SAVi css fixes
Display 'budget type' element in SAVi


Development Portal (2016-12-01 shi)
==============================
Fixed sort icons for publisher countries view with crs column
Update alternative search view text


Development Portal (2016-11-30 shi)
==============================
Alternative search view added
Removed filters and country portals
Removed compare buttons
Updated css fixes
Removed search button
Updated translations
Added filters as option for search2
Begin on mobile-friendly fixes
SAVi display update


Development Portal (2016-11-29 shi)
==============================
Added search icon for DISCOVER
Updated text for search boxes
Remove {portal_name} for old instances


Development Portal (2016-11-28 shi)
==============================
Updated BETA badge style
Updated search button style
Added welcome text section for new DISCOVER
Updated welcome text section styles
Removed Generator link
Added DISCOVER filter header
Minor css changes
Cleaned up feedback link
Changed Recipient to Recipient Country