@@ -242,7 +242,7 @@
 
 
 #filter_head3_text
-<div><div class="search_head" style="display:inline-block; vertical-align:top; width:50%;">EXPLORE <span>filters</span></div><a class="search_clear" style="display:inline-block; vertical-align:top; width:50%; text-align:right; color:#fff;">Clear all filters</a></div>
+<div><div class="search_head" style="display:inline-block; vertical-align:top; width:50%;">EXPLORE <span>filters</span></div><a class="search_clear">Clear all filters<span>x</span></a></div>
 
 #filter_head_text
 <div class="search_head">DISCOVER <span>filters</span></div>
