@@ -1,3 +1,8 @@
+Development Portal (2017-03-07 shi)
+==============================
+Added clear all filters option to search
+
+
 Development Portal (2017-03-06 shi)
 ==============================
 Start on Explore section for revised search inputs
